sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  deb=0; fin=getNombreValeurs()-2;  var x=true ;;
   while (x) {
   	x = false;
   	for (j<- deb to fin) {
   		if (plusPetit(j+1 , j)) {
   	      	echange(j , j+1) ;
   	      	x = true;
   	      	fin -=;
   	  }
   	}
   	for (j<- fin  to deb) {
   		if (plusPetit(j+1 , j)) {
   	      	echange(j , j+1) ;
   	      	x = true;
   	      	deb +=;
   	  }
  
     }
   }
}


debut=0; fin=lgr-2
Faire
  Pour tout i dans [debut,fin], faire:
    si i et i+1 doivent être échangées, le faire
  fin -= 1 (cela veut dire fin = fin -1)
  Pour tout i dans [fin, debut] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
  debut += 1 (ce qui veut dire debut = debut + 1)
tant qu'au moins l'un des parcours a inversé un élément